# desktop-monitor

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  register_startup.bat  register_task.ps1  setup.bat  start_monitor.bat  start_monitor.vbs
src/: config.py  main.py  privacy.py
src/api/: routes.py  server.py
src/collectors/: base.py  clipboard.py  keystroke.py  screenshot.py  window_tracker.py
src/dashboard/templates/: base.html  history.html  index.html  insights.html  search.html  settings.html
src/llm/: insights.py  ollama_client.py  qwen_vision_client.py  search.py  summarizer.py  vision_worker.py
src/storage/: database.py  file_store.py
